--- a/src/app/components/usercontact/usercontact.component.html
+++ b/src/app/components/usercontact/usercontact.component.html
@@ -2,7 +2,7 @@
     <div class="image-container">
         <img src="assets/home.png" class="d-block w-100">
         <div class="image-text">
-            <p class="bg-text">Find Your Style,<br> Be Yourself</p>
+            <p class="bg-text">Find Your Style,<br><br> Be Yourself</p>
             <button class="black-button">Shop Now</button>
         </div>
     </div>
@@ -68,8 +68,8 @@
       
           <div class="right-form-text">
             <p><img src="assets/icon5.png"><b>Address :</b></p>
-            <p class="two">Belezza</p>
-            <p class="two">983, Union Place,</p>
+            <p class="two">Belezza</p><br>
+            <p class="two">983, Union Place,</p><br>
             <p class="two">Colombo</p><br>
 
             <p><img src="assets/icon6.png"><b>Email :</b></p>
