--- a/src/app/components/usercontact/usercontact.component.scss
+++ b/src/app/components/usercontact/usercontact.component.scss
@@ -18,6 +18,7 @@
   
     .bg-text {
         font-size: 40px;
+        margin-bottom: 10px;
     }
   
     .black-button {
@@ -133,14 +134,14 @@
 
   .right-form-text {
     font-size: 18px;
-    line-height: 1.5;
+    line-height: 1.2;
   }
   img {
     width: 15px;
     height: 15px;
     margin-right: 15px; 
 }
-p { margin-bottom: -15px;
+.two { margin-bottom: -15px;
     color: #000000;
     font-size: 15px;
 }
