--- a/src/app/components/userhome/userhome.component.scss
+++ b/src/app/components/userhome/userhome.component.scss
@@ -18,6 +18,8 @@
   
     .bg-text {
         font-size: 40px;
+        margin-bottom: 30px;
+        margin-top: 20px;
     }
   
     .black-button {
