--- a/src/app/components/order/order.component.html
+++ b/src/app/components/order/order.component.html
@@ -1,1 +1,31 @@
-<p>order works!</p>
+<app-layoutuser>
+    <body>
+        <div class="table-container">
+<table>
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Created_at</th>
+        <th>Total</th>
+        <th>Updated_at</th>
+        <th>User Id</th>
+        <th>Options</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let order of orders">
+        <td>{{ order.id }}</td>
+        <td>{{ order.created_at }}</td>
+        <td>{{ order.total }}</td>
+        <td>{{ order.updated_at }}</td>
+        <td>{{ order.user }}</td>
+        <td>
+          <button class="delete" (click)="deleteOrder(order.id)">Cancel</button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+</body>
+</app-layoutuser>
+
