--- a/src/app/components/sellercollection/sellercollection.component.html
+++ b/src/app/components/sellercollection/sellercollection.component.html
@@ -32,7 +32,7 @@
             <td>
               <button class="add" (click)="openAddProductModal()">Add</button>
               <button class="update" (click)="updateProduct(product.id)">Update</button>
-              <button class="delete" (click)="deleteProduct(product.id)">Delete</button>
+              <button class="delete" (click)="deleteCollection(product.id)">Delete</button>
             </td>
           </tr>
         </tbody>
@@ -40,68 +40,6 @@
     </div>
 
 
-<!-- your.component.html -->
-<!--<div *ngIf="isNewProductModalOpen" class="popup-modal">
-  <div class="modal" tabindex="-1" role="dialog">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h4 class="modal-title">Add New Product</h4>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <form #form="ngForm" (ngSubmit)="saveProduct()">
-            <table>
-              <tr>
-                <td><label for="id">ID:</label></td>
-                <td><input matInput id="id" [(ngModel)]="newProduct.id" placeholder="ID" required></td>
-              </tr>
-              <tr>
-                <td><label for="name">Name:</label></td>
-                <td><input matInput id="name" [(ngModel)]="newProduct.name" placeholder="Name" required></td>
-              </tr>
-              <tr>
-                <td><label for="colour">Color:</label></td>
-                <td><input matInput id="colour" [(ngModel)]="newProduct.colour" placeholder="Color"></td>
-              </tr>
-              <tr>
-                <td><label for="description">Description:</label></td>
-                <td><input matInput id="description" [(ngModel)]="newProduct.description" placeholder="Description"></td>
-              </tr>
-              <tr>
-                <td><label for="price">Price:</label></td>
-                <td><input matInput id="price" [(ngModel)]="newProduct.price" placeholder="Price"></td>
-              </tr>
-              <tr>
-                <td><label for="quantity">Quantity:</label></td>
-                <td><input matInput id="quantity" [(ngModel)]="newProduct.quantity" placeholder="Quantity"></td>
-              </tr>
-              <tr>
-                <td><label for="category_id">Category ID:</label></td>
-                <td><input matInput id="category_id" [(ngModel)]="newProduct.category_id" placeholder="Category ID"></td>
-              </tr>
-              <tr>
-                <td><label for="sizes">Sizes:</label></td>
-                <td><input matInput id="sizes" [(ngModel)]="newProduct.sizes" placeholder="Sizes"></td>
-              </tr>
-              <tr>
-                <td><label for="photo">Photo:</label></td>
-                <td><input matInput type="file" (change)="handlePhotoChange($event)" accept="image/*"></td>
-              </tr>
-            </table>
-          </form>
-        </div>
-        <div class="modal-footer">
-          <button type="button" mat-button (click)="saveProduct()">Save</button>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
--->
-<!-- your.component.html -->
-<!-- your.component.html -->
 <div *ngIf="isNewProductModalOpen" class="popup-modal">
   <div class="modal">
     <div class="modal-header">
@@ -160,7 +98,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" (click)="resetNewProduct(form)">Clear</button>
-          <button type="submit" class="btn btn-primary">Save</button>
+          <button type="button" class="btn btn-primary" (click)="saveProduct(form)">Save</button>
         </div>
       </form>
     </div>
