navbar user updated

--- a/src/app/components/navbaruser/navbaruser.component.scss
+++ b/src/app/components/navbaruser/navbaruser.component.scss
@@ -33,7 +33,7 @@
   .navbar-links {
     display: flex;
     gap: 10px;
-    margin: 0; /* Reset margin */
+    margin: 0;
   }
   
   .navbar-links a {
@@ -41,7 +41,7 @@
     color: #000000;
     text-decoration: none;
     padding: 10px;
-    margin: 0; /* Reset margin */
+    margin: 0;
   }
   
   .navbar-login {
@@ -52,7 +52,7 @@
     padding: 8px 15px;
     font-size: 1rem;
     cursor: pointer;
-    margin: 0; /* Reset margin */
+    margin: 0;
   }
 
 
