--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
   <div class="image-container">
       <img src="assets/home.png" class="d-block w-100">
       <div class="image-text">
-          <p class="bg-text">Find Your Style,<br> Be Yourself</p>
+          <p class="bg-text">Find Your Style,<br><br> Be Yourself</p>
           <button class="black-button">Shop Now</button>
       </div>
   </div>
