--- a/src/app/components/user/user.component.scss
+++ b/src/app/components/user/user.component.scss
@@ -64,6 +64,7 @@ body {
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
+    margin-left: 130px;
   }
 .form-heading{
     text-align: center;
