user profile done

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,7 +4,7 @@
       <img src="assets/home.png" class="d-block w-100">
       <div class="image-text">
           <p class="bg-text">Find Your Style,<br><br> Be Yourself</p>
-          <button class="black-button">Shop Now</button>
+          <a href="login"><button class="black-button">Shop Now</button></a>
       </div>
   </div>
   <div class="list-container">
@@ -42,19 +42,19 @@
       <img src="assets/home2.png" alt="Image 1">
       <div class="image-texts">
         <p class="bg-texts">Women ’ s<br> Collection</p>
-        <button class="black-button">Shop Now</button>
+        <a href="login"><button class="black-button">Shop Now</button></a>
     </div>
       <img src="assets/home3.png" alt="Image 2">
       <div class="image-textz">
         <p class="bg-texts">Men ’ s<br> Collection</p>
-        <button class="black-button">Shop Now</button>
+        <a href="login"><button class="black-button">Shop Now</button></a>
     </div>
     </div>
     <div class="part2">
       <img src="assets/home4.png" alt="Image 3">
       <div class="image-texts">
         <p class="bg-texts">Kids ’ s<br> Collection</p>
-        <button class="black-button">Shop Now</button>
+        <a href="login"><button class="black-button">Shop Now</button></a>
     </div>
     </div>
   </div>
