--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,33 +1,34 @@
 <app-layoutuser>
     <body>
-<div class="container">
-    <div class="center-form">
-      <div class="form-heading">Edit Profile</div>
+      <div class="container">
+        <div class="center-form">
+          <div class="form-heading">Edit Profile</div>
   
-      <div class="form-row">
-        <input type="text" id="name" name="name" placeholder="Username">
-      </div>
+          <div class="form-row">
+            <input type="text" id="name" name="name" placeholder="Username" [(ngModel)]="user.username">
+          </div>
   
-      <div class="form-row">
-        <input type="text" id="email" name="email" placeholder="Email">
-      </div>
-
-      <div class="form-row">
-        <input type="text" id="name" name="name" placeholder="Fullname">
-      </div>
-
-      <div class="form-row">
-        <input type="text" id="name" name="name" placeholder="Phone">
-      </div>
+          <div class="form-row">
+            <input type="text" id="email" name="email" placeholder="Email" [(ngModel)]="user.email">
+          </div>
   
-      <div class="form-row">
-        <textarea id="message" name="message" placeholder="Address"></textarea>
-      </div>
+          <div class="form-row">
+            <input type="text" id="name" name="name" placeholder="Fullname" [(ngModel)]="user.fullname">
+          </div>
   
-      <div class="form-row">
-        <button class="button1">Update</button>
+          <div class="form-row">
+            <input type="text" id="name" name="name" placeholder="Phone" [(ngModel)]="user.phone">
+          </div>
+  
+          <div class="form-row">
+            <textarea id="message" name="message" placeholder="Address" [(ngModel)]="user.address"></textarea>
+          </div>
+  
+          <div class="form-row">
+            <button class="button1" (click)="updateCustomer()">Update</button>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
-</body>
+    </body>
   </app-layoutuser>
+  
